[package]
edition = "2021"
name = "understanding-futures"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.0"
tokio = {version = "1.15.0", features = ["full"]}
tokio-rustls = "0.23.2"
tracing = "0.1.29"
tracing-subscriber = {version = "0.3.5", features = ["std", "env-filter"]}
webpki = "0.22.0"
webpki-roots = "0.22.2"
